--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.506.0",
+    "lucide-react": "^0.509.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "stripe": "^18.1.0",
     "tailwind-merge": "^3.2.0"
   },
